poco/test/neg/nlib03.poc
/* nlib03.poc - Test Err_poco_lib_invalid: Library entry point returns NULL */
#pragma poco library "nullret"

main()
{
	puts("This should never execute!");
}

